services/ignite/ignite.svc.yaml
apiVersion: v1
kind: Service
metadata:
  # Name of Ignite Service used by Kubernetes IP finder for IP addresses lookup.
  name: ignite
  namespace: ignite
spec:
  clusterIP: None # custom value.
  ports:
    - name: discovery
      port: 9042 # custom value.
    - name: rest
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    # Must be equal to one of the labels set in Ignite pods'
    # deployement configuration.
    app: ignite
