services/ignite/ignite_webconsole.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignite-web
  namespace: ignite
spec:
  clusterIP: None 
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: console
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: ignite-web
